# generative-ai-intermediate

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  skills-lock.json
ai-agent-basics/examples/: pyproject.toml  re-act.py  skills-lock.json
ai-agent-basics/section-01-overview/: README.md
ai-agent-basics/section-01-overview/Agent_Orchestration_Research_20260308/: research_report_20260308_agent_orchestration.md
automation-with-ai-agents/chapter-01-minutes/: instruction.md  slides.md
dify-basics/: README.md
dify-basics/section-01-introduction/: README.md
dify-basics/section-02-prompt/: README.md
dify-basics/section-03-knowledge/: README.md
dify-basics/section02-prompt/: README.md
dify-basics/section02-prompt/assets/: base-slide.md
skills-basics/section01-introduction/: README.md
